@@ -3,6 +3,7 @@ BuildingsPy Changelog
 
 Version 2.0.1, July 17, 2019 -- Release 2.0
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+- When writing package.order, preserved the ordering of constants from the .mo file.
 - Changed doctest to Python 3.6.
 - For unit tests, added support for OPTIMICA.
 - For unit tests, changed to non-pedantic mode in Dymola if a model
